2020-03-14  Araki Ken  <arakiken@users.sf.net>

	* ui_draw_str.c: If CLIP_LINE is defined and top_margin < 0,
	  ui_draw_str() and ui_draw_str_to_eol() calls cairo_{set|unser}_clip().

	* libtype/ui_window_cairo.c: cairo_{set|unset}_clip() calls flush_glyphs()
	  in order to apply clipping region.

2020-03-08  Araki Ken  <arakiken@users.sf.net>

	* fb/ui.h: Compiling error on FreeBSD is fixed.

2020-03-07  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.fb, doc/ja/README.fb: Updated.

	* fb/ui_window.c:
	  - ui_window_get_str() supports unicode on FreeBSD.
	  - ModMask is cleared if keyboard input is unicode.

	* ui_display_linux.c:
	  - The type of diacrs_uc and diacrs is changed to pointer.
	  - load_diacr() is integrated to get_accented_char().
	  - ModMask is not cleared if kb_value doesn't change in either
	    kb_table = K_ALTTAB or kb_table = 0.

	* ui_display_freebsd.c: Dead key is processed to input accented characters
	  etc from keyboard.

2020-03-04  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.fb, doc/ja/README.fb: Updated.

	* ui_display_wscons.c: Dead key is processed to input accented characters
	  etc from keyboard.

	* wskbdutil.c: Added.

2020-03-01  Araki Ken  <arakiken@users.sf.net>

	* ef_ucs_property.table: Updated to Unicode 12.1.0 (UnicodeData.txt and
	  EastAsianWidth.txt)

	* config.sub, config.guess: Updated.

2020-03-01  Araki Ken  <arakiken@users.sf.net>

	* xlib/ui_imagelib.c: load_sixel() supports 8-bit depth, it enables you
	  to show sixel on 8-bit depth without mlimgloader.

	* gdk-pixbuf.c: pixbuf_to_pixmap_pseudocolor() is fixed to dither the
	  last 1 pixel of each line properly.

2020-02-29  Araki Ken  <arakiken@users.sf.net>

	* vt_parser.c: (void*) + num * sizeof(vt_macro_t) -> (vt_macro_t*) + num

	* xlib/ui_window.c, vt_term.c:
	  ui_window_xft_draw_string32() and vt_term_enter_backscroll_mode()
	  returns nothing.

	* ui_imagelib.h: Ternary operator is removed from ui_destroy_mask() macro